saw one thing that was messing with me on tablet desktop for the incoming and outgoing h2's but that is fixed and i can sleep at night now.

--- a/src/Components/Rides/RideRequests/RideRequests.scss
+++ b/src/Components/Rides/RideRequests/RideRequests.scss
@@ -19,6 +19,7 @@
             font-size: 2rem;
             padding: 10px 0px;
             @include respond-to("tablet") {
+                font-size: 2.8rem;
                 padding: 5px 0px 15px 0px;
             }
         }
@@ -32,6 +33,7 @@
             font-size: 2rem;
             padding: 10px 0px;
             @include respond-to("tablet") {
+                font-size: 2.8rem;
                 padding: 15px 0px;
             }
         }
